@@ -47,6 +47,7 @@ import org.trade.core.dao.EntityManagerHelper;
 import org.trade.core.util.CoreUtils;
 import org.trade.core.util.TradingCalendar;
 import org.trade.dictionary.valuetype.Currency;
+import org.trade.persistent.PersistentModelException;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -70,7 +71,6 @@ public class PortfolioHome {
     public Portfolio findById(Integer id) {
 
         try {
-
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             Portfolio instance = entityManager.find(Portfolio.class, id);
@@ -93,7 +93,6 @@ public class PortfolioHome {
     public List<Portfolio> findAll() {
 
         try {
-
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             CriteriaBuilder builder = entityManager.getCriteriaBuilder();
@@ -123,7 +122,6 @@ public class PortfolioHome {
     public Portfolio findDefault() {
 
         try {
-
             Portfolio portfolio = null;
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
@@ -132,7 +130,6 @@ public class PortfolioHome {
             Root<Portfolio> from = query.from(Portfolio.class);
             query.select(from);
             List<Portfolio> items = entityManager.createQuery(query).getResultList();
-
             for (Portfolio item : items) {
 
                 if (item.getIsDefault()) {
@@ -161,7 +158,6 @@ public class PortfolioHome {
     public Portfolio findByName(String name) {
 
         try {
-
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             CriteriaBuilder builder = entityManager.getCriteriaBuilder();
@@ -170,17 +166,12 @@ public class PortfolioHome {
             query.select(from);
             query.where(builder.equal(from.get("name"), name));
             List<Portfolio> items = entityManager.createQuery(query).getResultList();
-
             for (Portfolio item : items) {
-
                 item.getPortfolioAccounts().size();
             }
-
             entityManager.getTransaction().commit();
-
-            if (!items.isEmpty()) {
-
-                return items.getFirst();
+            if (items.size() > 0) {
+                return items.get(0);
             }
             return null;
 
@@ -207,10 +198,12 @@ public class PortfolioHome {
             Root<Portfolio> from = query.from(Portfolio.class);
             query.select(from);
             List<Portfolio> items = entityManager.createQuery(query).getResultList();
-
             for (Portfolio item : items) {
-
-                item.setIsDefault(item.getId().equals(defaultPortfolio.getId()));
+                if (item.getId().equals(defaultPortfolio.getId())) {
+                    item.setIsDefault(true);
+                } else {
+                    item.setIsDefault(false);
+                }
                 entityManager.persist(item);
             }
             entityManager.getTransaction().commit();
@@ -225,65 +218,49 @@ public class PortfolioHome {
     /**
      * Method persistPortfolio.
      *
-     * @param instance Portfolio
+     * @param portfolio Portfolio
      * @return Portfolio
+     * @throws PersistentModelException
      */
 
-    public synchronized Portfolio persistPortfolio(final Portfolio instance) {
-
+    public synchronized Portfolio persistPortfolio(final Portfolio instance) throws PersistentModelException {
         try {
-
             EntityManager entityManager = EntityManagerHelper.getEntityManager();
             entityManager.getTransaction().begin();
             Portfolio portfolio = findPortfolioByName(instance.getName());
-
             if (null == portfolio) {
-
                 instance.setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
-
                 for (PortfolioAccount item : instance.getPortfolioAccounts()) {
-
                     Account account = findByAccountNumber(item.getAccount().getAccountNumber());
-
                     if (null == account) {
-
                         item.getAccount().setCurrency(Currency.USD);
                         item.getAccount().setName(item.getAccount().getAccountNumber());
                         item.getAccount().setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
                     } else {
-
                         item.setAccount(account);
                     }
                 }
                 entityManager.persist(instance);
 
             } else {
-
                 if (0 != CoreUtils.nullSafeComparator(portfolio.getAllocationMethod(),
                         instance.getAllocationMethod())) {
-
                     portfolio.setAllocationMethod(instance.getAllocationMethod());
                     portfolio.setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
                 }
-
                 for (PortfolioAccount item : instance.getPortfolioAccounts()) {
 
                     Account account = findByAccountNumber(item.getAccount().getAccountNumber());
                     if (null == account) {
-
                         item.getAccount().setCurrency(Currency.USD);
                         item.getAccount().setName(item.getAccount().getAccountNumber());
                         item.getAccount().setLastUpdateDate(TradingCalendar.getDateTimeNowMarketTimeZone());
                     } else {
-
                         item.setAccount(account);
                     }
-
                     PortfolioAccount portfolioAccount = findByNameAndAccountNumber(portfolio.getName(),
                             item.getAccount().getAccountNumber());
-
                     if (null == portfolioAccount) {
-
                         item.setPortfolio(portfolio);
                         portfolio.getPortfolioAccounts().add(item);
                     }
@@ -308,20 +285,22 @@ public class PortfolioHome {
      */
     private Account findByAccountNumber(String accountNumber) {
 
-        EntityManager entityManager = EntityManagerHelper.getEntityManager();
-        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
-        CriteriaQuery<Account> query = builder.createQuery(Account.class);
-        Root<Account> from = query.from(Account.class);
-        query.select(from);
-        query.where(builder.equal(from.get("accountNumber"), accountNumber));
-        List<Account> items = entityManager.createQuery(query).getResultList();
+        try {
+            EntityManager entityManager = EntityManagerHelper.getEntityManager();
+            CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+            CriteriaQuery<Account> query = builder.createQuery(Account.class);
+            Root<Account> from = query.from(Account.class);
+            query.select(from);
+            query.where(builder.equal(from.get("accountNumber"), accountNumber));
+            List<Account> items = entityManager.createQuery(query).getResultList();
+            if (items.size() > 0) {
+                return items.get(0);
+            }
+            return null;
 
-        if (!items.isEmpty()) {
-
-            return items.getFirst();
+        } catch (Exception re) {
+            throw re;
         }
-        return null;
-
     }
 
     /**
@@ -332,20 +311,22 @@ public class PortfolioHome {
      */
     private Portfolio findPortfolioByName(String name) {
 
-        EntityManager entityManager = EntityManagerHelper.getEntityManager();
-        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
-        CriteriaQuery<Portfolio> query = builder.createQuery(Portfolio.class);
-        Root<Portfolio> from = query.from(Portfolio.class);
-        query.select(from);
-        query.where(builder.equal(from.get("name"), name));
-        List<Portfolio> items = entityManager.createQuery(query).getResultList();
+        try {
+            EntityManager entityManager = EntityManagerHelper.getEntityManager();
+            CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+            CriteriaQuery<Portfolio> query = builder.createQuery(Portfolio.class);
+            Root<Portfolio> from = query.from(Portfolio.class);
+            query.select(from);
+            query.where(builder.equal(from.get("name"), name));
+            List<Portfolio> items = entityManager.createQuery(query).getResultList();
+            if (items.size() > 0) {
+                return items.get(0);
+            }
+            return null;
 
-        if (!items.isEmpty()) {
-
-            return items.getFirst();
+        } catch (Exception re) {
+            throw re;
         }
-        return null;
-
     }
 
     /**
@@ -357,35 +338,34 @@ public class PortfolioHome {
      */
     private PortfolioAccount findByNameAndAccountNumber(String portfolioName, String accountNumber) {
 
-        EntityManager entityManager = EntityManagerHelper.getEntityManager();
-        CriteriaBuilder builder = entityManager.getCriteriaBuilder();
-        CriteriaQuery<PortfolioAccount> query = builder.createQuery(PortfolioAccount.class);
-        Root<PortfolioAccount> from = query.from(PortfolioAccount.class);
-        query.select(from);
-        List<Predicate> predicates = new ArrayList<>();
+        try {
+            EntityManager entityManager = EntityManagerHelper.getEntityManager();
+            CriteriaBuilder builder = entityManager.getCriteriaBuilder();
+            CriteriaQuery<PortfolioAccount> query = builder.createQuery(PortfolioAccount.class);
+            Root<PortfolioAccount> from = query.from(PortfolioAccount.class);
+            query.select(from);
+            List<Predicate> predicates = new ArrayList<Predicate>();
+            if (null != accountNumber) {
+                Join<PortfolioAccount, Account> account = from.join("account");
+                Predicate predicate = builder.equal(account.get("accountNumber"), accountNumber);
+                predicates.add(predicate);
+            }
+            if (null != portfolioName) {
+                Join<PortfolioAccount, Portfolio> portfolio = from.join("portfolio");
+                Predicate predicate = builder.equal(portfolio.get("name"), portfolioName);
+                predicates.add(predicate);
+            }
 
-        if (null != accountNumber) {
+            query.where(predicates.toArray(new Predicate[]{}));
+            TypedQuery<PortfolioAccount> typedQuery = entityManager.createQuery(query);
+            List<PortfolioAccount> items = typedQuery.getResultList();
+            if (items.size() > 0) {
+                return items.get(0);
+            }
+            return null;
 
-            Join<PortfolioAccount, Account> account = from.join("account");
-            Predicate predicate = builder.equal(account.get("accountNumber"), accountNumber);
-            predicates.add(predicate);
+        } catch (Exception re) {
+            throw re;
         }
-        if (null != portfolioName) {
-
-            Join<PortfolioAccount, Portfolio> portfolio = from.join("portfolio");
-            Predicate predicate = builder.equal(portfolio.get("name"), portfolioName);
-            predicates.add(predicate);
-        }
-
-        query.where(predicates.toArray(new Predicate[]{}));
-        TypedQuery<PortfolioAccount> typedQuery = entityManager.createQuery(query);
-        List<PortfolioAccount> items = typedQuery.getResultList();
-
-        if (!items.isEmpty()) {
-
-            return items.getFirst();
-        }
-        return null;
-
     }
 }
