@@ -103,8 +103,8 @@ public class StrategyHome {
                 strategy.getRules().size();
             }
             entityManager.getTransaction().commit();
-            if (!items.isEmpty()) {
-                return items.getFirst();
+            if (items.size() > 0) {
+                return items.get(0);
             }
             return null;
 
