@@ -48,10 +48,8 @@ import org.trade.ui.base.TableModel;
 
 import javax.swing.event.TableModelEvent;
 import java.awt.*;
-import java.io.Serial;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.Vector;
 
 /**
@@ -61,7 +59,6 @@ public class IndicatorSeriesTableModel extends TableModel {
     /**
      *
      */
-    @Serial
     private static final long serialVersionUID = 3087514589731145479L;
     private static final String STRATEGY = "  Strategy* ";
     private static final String TYPE = "  Indicator* ";
@@ -113,7 +110,7 @@ public class IndicatorSeriesTableModel extends TableModel {
         if (!getData().getIndicatorSeries().isEmpty()) {
 
             for (final IndicatorSeries element : getData().getIndicatorSeries()) {
-                final Vector<Object> newRow = new Vector<>();
+                final Vector<Object> newRow = new Vector<Object>();
                 getNewRow(newRow, element);
                 rows.add(newRow);
             }
@@ -133,9 +130,11 @@ public class IndicatorSeriesTableModel extends TableModel {
         if (column == 0) {
             return false;
         }
-        if (Objects.equals(columnNames[column], TYPE)) {
+        if (columnNames[column] == TYPE) {
             IndicatorSeries element = getData().getIndicatorSeries().get(row);
-            return null == element.getIdIndicatorSeries();
+            if (null != element.getIdIndicatorSeries()) {
+                return false;
+            }
         }
         return true;
     }
@@ -159,8 +158,8 @@ public class IndicatorSeriesTableModel extends TableModel {
             case 1: {
                 String type = ((org.trade.dictionary.valuetype.IndicatorSeries) value).getCode();
                 String indicatorName = type.substring(0, type.indexOf("Series"));
-                element = this.getIndicatorSeries(element.getStrategy(), indicatorName, type, indicatorName
-                );
+                element = this.getIndicatorSeries(element.getStrategy(), indicatorName, type, indicatorName,
+                        new Boolean(false), new Integer(0), new Boolean(false));
                 this.replaceRow(element, row);
                 break;
             }
@@ -173,11 +172,11 @@ public class IndicatorSeriesTableModel extends TableModel {
                 break;
             }
             case 4: {
-                element.setDisplaySeries(Boolean.valueOf(((YesNo) value).getCode()));
+                element.setDisplaySeries(new Boolean(((YesNo) value).getCode()));
                 break;
             }
             case 5: {
-                element.setSubChart(Boolean.valueOf(((YesNo) value).getCode()));
+                element.setSubChart(new Boolean(((YesNo) value).getCode()));
                 break;
             }
             case 6: {
@@ -196,7 +195,7 @@ public class IndicatorSeriesTableModel extends TableModel {
             default: {
             }
         }
-        Objects.requireNonNull(element).setDirty(true);
+        element.setDirty(true);
     }
 
     /**
@@ -208,7 +207,7 @@ public class IndicatorSeriesTableModel extends TableModel {
     public void replaceRow(IndicatorSeries newElement, int selectedRow) {
 
         getData().getIndicatorSeries().set(selectedRow, newElement);
-        final Vector<Object> newRow = new Vector<>();
+        final Vector<Object> newRow = new Vector<Object>();
         getNewRow(newRow, newElement);
         rows.set(selectedRow, newRow);
         // Tell the listeners a new table has arrived.
@@ -240,24 +239,29 @@ public class IndicatorSeriesTableModel extends TableModel {
     /**
      * Method getIndicatorSeries.
      *
-     * @param strategy    Strategy
-     * @param name        String
-     * @param type        String
-     * @param description String
+     * @param strategy        Strategy
+     * @param name            String
+     * @param type            String
+     * @param description     String
+     * @param displaySeries   Boolean
+     * @param seriesRGBColory Integer
+     * @param subChart        Boolean
      * @return IndicatorSeries
      */
-    private IndicatorSeries getIndicatorSeries(Strategy strategy, String name, String type, String description) {
+    private IndicatorSeries getIndicatorSeries(Strategy strategy, String name, String type, String description,
+                                               Boolean displaySeries, Integer seriesRGBColory, Boolean subChart) {
         try {
-            Vector<Object> parm = new Vector<>();
+            Vector<Object> parm = new Vector<Object>();
             parm.add(strategy);
             parm.add(name);
             parm.add(type);
             parm.add(description);
-            parm.add(false);
-            parm.add(0);
-            parm.add(false);
+            parm.add(displaySeries);
+            parm.add(seriesRGBColory);
+            parm.add(subChart);
             String className = "org.trade.strategy.data." + type;
-            return (IndicatorSeries) ClassFactory.getCreateClass(className, parm, this);
+            IndicatorSeries instance = (IndicatorSeries) ClassFactory.getCreateClass(className, parm, this);
+            return instance;
         } catch (Exception e) {
             /*
              * will only ever happen is IndicatorSeries does not exist.
@@ -271,11 +275,11 @@ public class IndicatorSeriesTableModel extends TableModel {
         String indicatorName = IndicatorSeries.MovingAverageSeries.substring(0,
                 IndicatorSeries.MovingAverageSeries.indexOf("Series"));
         IndicatorSeries element = getIndicatorSeries(getData(), indicatorName, IndicatorSeries.MovingAverageSeries,
-                indicatorName);
+                indicatorName, new Boolean(false), new Integer(0), new Boolean(false));
         getData().getIndicatorSeries().add(element);
         getData().setDirty(true);
-        final Vector<Object> newRow = new Vector<>();
-        getNewRow(newRow, Objects.requireNonNull(element));
+        final Vector<Object> newRow = new Vector<Object>();
+        getNewRow(newRow, element);
         rows.add(newRow);
         // Tell the listeners a new table has arrived.
         this.fireTableRowsInserted(rows.size() - 1, rows.size() - 1);
