@@ -43,16 +43,14 @@ import org.trade.ui.models.TradingdayTreeModel;
 import javax.swing.*;
 import javax.swing.tree.DefaultTreeCellRenderer;
 import java.awt.*;
-import java.io.Serial;
 
 /**
  *
  */
 public class TradingdayTreeCellRenderer extends DefaultTreeCellRenderer {
 
-    @Serial
     private static final long serialVersionUID = 7664391812385841364L;
-    private final Color backgroundSelectionColor;
+    private Color backgroundSelectionColor = null;
 
     public TradingdayTreeCellRenderer() {
         super();
@@ -83,9 +81,10 @@ public class TradingdayTreeCellRenderer extends DefaultTreeCellRenderer {
             this.setBackgroundSelectionColor(backgroundSelectionColor);
         }
         if (node != null) {
-            if ((node instanceof Tradestrategy tradestrategy) /* leaf */) {
+            if ((node instanceof Tradestrategy) /* leaf */) {
+                Tradestrategy tradestrategy = (Tradestrategy) node;
                 if (!tradestrategy.getTradeOrders().isEmpty()) {
-                    TradeOrder tradeOrder = tradestrategy.getTradeOrders().getFirst();
+                    TradeOrder tradeOrder = tradestrategy.getTradeOrders().get(0);
                     if (tradeOrder.hasTradePosition()) {
                         if (Side.BOT.equals(tradeOrder.getTradePosition().getSide())) {
                             comp.setForeground(Color.GREEN);
