@@ -35,12 +35,8 @@
  */
 package org.trade.broker;
 
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
+import org.junit.*;
 import org.junit.Rule;
-import org.junit.Test;
 import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -51,17 +47,14 @@ import org.trade.core.properties.ConfigProperties;
 import org.trade.core.util.TradingCalendar;
 import org.trade.persistent.IPersistentModel;
 import org.trade.persistent.PersistentModelException;
-import org.trade.persistent.dao.Candle;
-import org.trade.persistent.dao.Contract;
-import org.trade.persistent.dao.TradeOrder;
-import org.trade.persistent.dao.TradePosition;
-import org.trade.persistent.dao.Tradestrategy;
-import org.trade.persistent.dao.Tradingday;
-import org.trade.persistent.dao.Tradingdays;
+import org.trade.persistent.dao.*;
 import org.trade.ui.TradeAppLoadConfig;
 import org.trade.ui.base.BasePanel;
 
 import javax.swing.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+import java.beans.PropertyChangeEvent;
 import java.time.ZonedDateTime;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -69,7 +62,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import static org.junit.Assert.fail;
 
 /**
- * Some tests for the  DataUtilities class.
+ * Some tests for the {@link DataUtilities} class.
  *
  * @author Simon Allen
  * @version $Revision: 1.0 $
@@ -86,7 +79,7 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
     private static Integer clientId;
     private static Integer port = null;
     private static String host = null;
-    private static final int testCaseGrandTotal = 0;
+    private static int testCaseGrandTotal = 0;
     private static Timer timer = null;
     private boolean connectionFailed = false;
     private static AtomicInteger timerRunning = null;
@@ -97,6 +90,8 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
 
     /**
      * Method setUpBeforeClass.
+     *
+     * @throws Exception
      */
     @BeforeClass
     public static void setUpBeforeClass() throws Exception {
@@ -104,13 +99,15 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
             TradeAppLoadConfig.loadAppProperties();
 
             clientId = ConfigProperties.getPropAsInt("trade.tws.clientId");
-            port = Integer.valueOf(ConfigProperties.getPropAsString("trade.tws.port"));
+            port = new Integer(ConfigProperties.getPropAsString("trade.tws.port"));
             host = ConfigProperties.getPropAsString("trade.tws.host");
 
-            timer = new Timer(250, _ -> {
-                synchronized (lockCoreUtilsTest) {
-                    timerRunning.addAndGet(250);
-                    lockCoreUtilsTest.notifyAll();
+            timer = new Timer(250, new ActionListener() {
+                public void actionPerformed(ActionEvent e) {
+                    synchronized (lockCoreUtilsTest) {
+                        timerRunning.addAndGet(250);
+                        lockCoreUtilsTest.notifyAll();
+                    }
                 }
             });
 
@@ -122,6 +119,8 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
     /**
      * Method setUp. Try to connect to the Broker for these tests that but
      * candle data from the broker and test the throtle monitor.
+     *
+     * @throws Exception
      */
     @Before
     public void setUp() throws Exception {
@@ -143,12 +142,14 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
                 _log.warn("Could not connect to TWS test will be ignored.", tWSBrokerModel.isConnected());
 
         } catch (InterruptedException e) {
-            _log.info("Thread interrupt: {}", e.getMessage());
+            _log.info("Thread interrupt: " + e.getMessage());
         }
     }
 
     /**
      * Method tearDown.
+     *
+     * @throws Exception
      */
     @After
     public void tearDown() throws Exception {
@@ -179,6 +180,8 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
 
     /**
      * Method tearDownAfterClass.
+     *
+     * @throws Exception
      */
     @AfterClass
     public static void tearDownAfterClass() throws Exception {
@@ -204,20 +207,22 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
                 }
                 brokerDataRequestProgressMonitor = new BrokerDataRequestMonitor(tWSBrokerModel, tradePersistentModel,
                         tradingdays);
-                brokerDataRequestProgressMonitor.addPropertyChangeListener(evt -> {
-                    if ("progress".equals(evt.getPropertyName())) {
-                        int progress = (Integer) evt.getNewValue();
-                        String message = String.format("Completed %d%%.", progress);
-                        _log.warn(message);
-                    } else if ("information".equals(evt.getPropertyName())) {
-                        _log.warn("Information message: {}", evt.getNewValue());
-                        if (brokerDataRequestProgressMonitor.isDone()) {
-                            String message = String.format("Completed %d%%.", 100);
+                brokerDataRequestProgressMonitor.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
+                    public void propertyChange(PropertyChangeEvent evt) {
+                        if ("progress".equals(evt.getPropertyName())) {
+                            int progress = (Integer) evt.getNewValue();
+                            String message = String.format("Completed %d%%.", progress);
                             _log.warn(message);
-                        }
+                        } else if ("information".equals(evt.getPropertyName())) {
+                            _log.warn("Information message: " + (String) evt.getNewValue());
+                            if (brokerDataRequestProgressMonitor.isDone()) {
+                                String message = String.format("Completed %d%%.", 100);
+                                _log.warn(message);
+                            }
 
-                    } else if ("error".equals(evt.getPropertyName())) {
-                        _log.error("Error getting history data.{}", ((Exception) evt.getNewValue()).getMessage());
+                        } else if ("error".equals(evt.getPropertyName())) {
+                            _log.error("Error getting history data." + ((Exception) evt.getNewValue()).getMessage());
+                        }
                     }
                 });
                 brokerDataRequestProgressMonitor.execute();
@@ -255,20 +260,22 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
                 }
                 brokerDataRequestProgressMonitor = new BrokerDataRequestMonitor(tWSBrokerModel, tradePersistentModel,
                         tradingdays);
-                brokerDataRequestProgressMonitor.addPropertyChangeListener(evt -> {
-                    if ("progress".equals(evt.getPropertyName())) {
-                        int progress = (Integer) evt.getNewValue();
-                        String message = String.format("Completed %d%%.", progress);
-                        _log.warn(message);
-                    } else if ("information".equals(evt.getPropertyName())) {
-                        _log.warn("Information message: {}", evt.getNewValue());
-                        if (brokerDataRequestProgressMonitor.isDone()) {
-                            String message = String.format("Completed %d%%.", 100);
+                brokerDataRequestProgressMonitor.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
+                    public void propertyChange(PropertyChangeEvent evt) {
+                        if ("progress".equals(evt.getPropertyName())) {
+                            int progress = (Integer) evt.getNewValue();
+                            String message = String.format("Completed %d%%.", progress);
                             _log.warn(message);
-                        }
+                        } else if ("information".equals(evt.getPropertyName())) {
+                            _log.warn("Information message: " + (String) evt.getNewValue());
+                            if (brokerDataRequestProgressMonitor.isDone()) {
+                                String message = String.format("Completed %d%%.", 100);
+                                _log.warn(message);
+                            }
 
-                    } else if ("error".equals(evt.getPropertyName())) {
-                        _log.error("Error getting history data.{}", ((Exception) evt.getNewValue()).getMessage());
+                        } else if ("error".equals(evt.getPropertyName())) {
+                            _log.error("Error getting history data." + ((Exception) evt.getNewValue()).getMessage());
+                        }
                     }
                 });
                 brokerDataRequestProgressMonitor.execute();
@@ -315,20 +322,22 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
 
                 brokerDataRequestProgressMonitor = new BrokerDataRequestMonitor(tWSBrokerModel, tradePersistentModel,
                         tradingdays);
-                brokerDataRequestProgressMonitor.addPropertyChangeListener(evt -> {
-                    if ("progress".equals(evt.getPropertyName())) {
-                        int progress = (Integer) evt.getNewValue();
-                        String message = String.format("Completed %d%%.", progress);
-                        _log.warn(message);
-                    } else if ("information".equals(evt.getPropertyName())) {
-                        _log.warn("Information message: {}", evt.getNewValue());
-                        if (brokerDataRequestProgressMonitor.isDone()) {
-                            String message = String.format("Completed %d%%.", 100);
+                brokerDataRequestProgressMonitor.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
+                    public void propertyChange(PropertyChangeEvent evt) {
+                        if ("progress".equals(evt.getPropertyName())) {
+                            int progress = (Integer) evt.getNewValue();
+                            String message = String.format("Completed %d%%.", progress);
                             _log.warn(message);
-                        }
+                        } else if ("information".equals(evt.getPropertyName())) {
+                            _log.warn("Information message: " + (String) evt.getNewValue());
+                            if (brokerDataRequestProgressMonitor.isDone()) {
+                                String message = String.format("Completed %d%%.", 100);
+                                _log.warn(message);
+                            }
 
-                    } else if ("error".equals(evt.getPropertyName())) {
-                        _log.error("Error getting history data.{}", ((Exception) evt.getNewValue()).getMessage());
+                        } else if ("error".equals(evt.getPropertyName())) {
+                            _log.error("Error getting history data." + ((Exception) evt.getNewValue()).getMessage());
+                        }
                     }
                 });
                 brokerDataRequestProgressMonitor.execute();
@@ -375,20 +384,22 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
 
                 brokerDataRequestProgressMonitor = new BrokerDataRequestMonitor(tWSBrokerModel, tradePersistentModel,
                         tradingdays);
-                brokerDataRequestProgressMonitor.addPropertyChangeListener(evt -> {
-                    if ("progress".equals(evt.getPropertyName())) {
-                        int progress = (Integer) evt.getNewValue();
-                        String message = String.format("Completed %d%%.", progress);
-                        _log.warn(message);
-                    } else if ("information".equals(evt.getPropertyName())) {
-                        _log.warn("Information message: {}", evt.getNewValue());
-                        if (brokerDataRequestProgressMonitor.isDone()) {
-                            String message = String.format("Completed %d%%.", 100);
+                brokerDataRequestProgressMonitor.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
+                    public void propertyChange(PropertyChangeEvent evt) {
+                        if ("progress".equals(evt.getPropertyName())) {
+                            int progress = (Integer) evt.getNewValue();
+                            String message = String.format("Completed %d%%.", progress);
                             _log.warn(message);
-                        }
+                        } else if ("information".equals(evt.getPropertyName())) {
+                            _log.warn("Information message: " + (String) evt.getNewValue());
+                            if (brokerDataRequestProgressMonitor.isDone()) {
+                                String message = String.format("Completed %d%%.", 100);
+                                _log.warn(message);
+                            }
 
-                    } else if ("error".equals(evt.getPropertyName())) {
-                        _log.error("Error getting history data.{}", ((Exception) evt.getNewValue()).getMessage());
+                        } else if ("error".equals(evt.getPropertyName())) {
+                            _log.error("Error getting history data." + ((Exception) evt.getNewValue()).getMessage());
+                        }
                     }
                 });
                 brokerDataRequestProgressMonitor.execute();
@@ -465,10 +476,11 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
     public void historicalDataComplete(Tradestrategy tradestrategy) {
 
         try {
-            _log.info("Symbol: {} Candles  saved: {}", tradestrategy.getContract().getSymbol(), tradePersistentModel.findCandleCount(tradestrategy.getTradingday().getId(),
+            _log.info("Symbol: " + tradestrategy.getContract().getSymbol() + " Candles  saved: "
+                    + tradePersistentModel.findCandleCount(tradestrategy.getTradingday().getId(),
                     tradestrategy.getContract().getId()));
         } catch (PersistentModelException ex) {
-            _log.error("Error historicalDataComplete Msg: {}", ex.getMessage());
+            _log.error("Error historicalDataComplete Msg: " + ex.getMessage());
         }
     }
 
@@ -501,7 +513,7 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
     /**
      * Method brokerError.
      *
-     * @param ex BrokerModelException
+     * @param brokerError BrokerModelException
      */
     public void brokerError(BrokerModelException ex) {
         if (502 == ex.getErrorCode()) {
@@ -509,13 +521,13 @@ public class TWSBrokerModelTest implements IBrokerChangeListener {
             return;
         }
         if (ex.getErrorId() == 1) {
-            _log.error("Error: {}", ex.getErrorCode(), ex.getMessage(), ex);
+            _log.error("Error: " + ex.getErrorCode(), ex.getMessage(), ex);
         } else if (ex.getErrorId() == 2) {
-            _log.warn("Warning: {}", ex.getMessage(), BasePanel.WARNING);
+            _log.warn("Warning: " + ex.getMessage(), BasePanel.WARNING);
         } else if (ex.getErrorId() == 3) {
-            _log.info("Information: {}", ex.getMessage(), BasePanel.INFORMATION);
+            _log.info("Information: " + ex.getMessage(), BasePanel.INFORMATION);
         } else {
-            _log.error("Unknown Error Id Code: {}", ex.getErrorCode(), ex.getMessage(), ex);
+            _log.error("Unknown Error Id Code: " + ex.getErrorCode(), ex.getMessage(), ex);
         }
     }
 
